tests/baselines/reference/classExtendsEveryObjectType.errors.txt
==== tests/cases/compiler/classExtendsEveryObjectType.ts (7 errors) ====
    interface I {
        foo: string;
    }
    class C extends I { } // error
                    ~
!!! error TS2073: A class may only extend another class.
    
    class C2 extends { foo: string; } { } // error
    var x: { foo: string; }
    class C3 extends x { } // error
                     ~
!!! error TS2095: Could not find symbol 'x'.
    
    module M { export var x = 1; }
    class C4 extends M { } // error
                     ~
!!! error TS2073: A class may only extend another class.
                     ~
!!! error TS4022: Type reference cannot refer to container 'M'.
    
    function foo() { }
    class C5 extends foo { } // error
                     ~~~
!!! error TS2095: Could not find symbol 'foo'.
    
    class C6 extends []{ } // error
                     ~
!!! error TS1008: Unexpected token; 'type name' expected.
                       ~
!!! error TS1005: ';' expected.